<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="#5F9EA0">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/register"
        android:textSize="50sp"

        />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/textview_name"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="60dp"
            android:text="@string/name"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/edittext_name"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="140dp"
            android:background="#FBFCFD"
            android:maxLines="1" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/textview_sno"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="60dp"
            android:text="@string/sno"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/editview_sno"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="140dp"
            android:background="#FBFCFD"
            android:maxLines="1" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp">
    <TextView
        android:id="@+id/textview_iphone"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="60dp"
        android:text="@string/iphone"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editview_iphone"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="140dp"
        android:background="#FBFCFD"
        android:maxLines="1"
        />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/textview_number"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="60dp"
            android:text="@string/number"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/editview_number"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="140dp"
            android:background="#FBFCFD"
            android:maxLines="1"
            />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/textview_password"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="60dp"
            android:text="@string/password"
            android:textSize="25sp"
             />

        <EditText
            android:id="@+id/editview_password"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="140dp"
            android:background="#FBFCFD"
            android:maxLines="1"
            />
    </FrameLayout>
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center">
        <Button
            android:id="@+id/button_OK"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="确定"
            android:textSize="25sp"
            />
        <Button
            android:id="@+id/button_return"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="150dp"
            android:text="返回"
            android:textSize="25sp"
            />
    </FrameLayout>

</LinearLayout>